Use Path.of()